GPC/tests/examples/fail/multipleObjectDecls.gpc

GPRM::Kernel::Test a;
GPRM::Kernel::Test2 a;

int multipleObjectDecls() {
    return 0;
}
